--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL= http://localhost
+APP_URL=  http://studenti.sum.ba/projekti/rwa/2023/g09
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=shop_db
-DB_USERNAME= 
-DB_PASSWORD=
+DB_DATABASE=rwa092023
+DB_USERNAME= rwa092023
+DB_PASSWORD=csdigital2023
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
