--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=  http://studenti.sum.ba/projekti/rwa/2023/g09
+APP_URL=  http://rwa092023.studenti.sum.ba/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
